wireframe takehome day4

--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    
 </head>
 <body>
     <!-- NAV BAR -->
     <div class="container-fluid">
         <header class="container">
             <nav class="row">
-                <div class="col-md-12">
+                    <i class="far fa-angry fa-3x col-md-6"></i>
+                <div class="col-md-6">
                     <ul class="nav nav-pills navbar-right">
                             <li role="presentation" class="active"><a href="#">Home</a></li>
                             <li role="presentation"><a href="#">Profile</a></li>
