added pictures, wireframe almost complete

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -12,10 +12,43 @@
 <body>
     <div class="container-fluid">
         <div class="container">
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
-            <div class="row"></div>
+            <div class="row">
+                <nav class="col-md-12">
+                    <div class="col-md-2">
+                        <i class="fas fa-ambulance fa-3x"></i>
+                    </div>
+                    <div class="col-md-9">
+                    <ul class="nav nav-tabs navbar-right">
+                            <li role="presentation" class="active"><a href="#">Home</a></li>
+                            <li role="presentation"><a href="#">Profile</a></li>
+                            <li role="presentation"><a href="#">Messages</a></li>
+                    </ul>
+                </div>
+                </nav>
+            </div>
+            <div class="row">
+                    <div class="jumbotron">
+                            <div class="container">
+                                 <h1 class="text-center">Fast, Cheap and Reliable</h1>
+                            </div>
+            </div>
+            <div class="row">
+                <div class="col-md-2">
+                    <button class="btn btn-primary"> 
+                            Doctors Near Me
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="container-fluid">
+                <div class="col-md-4 text-left">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur rerum velit, suscipit provident incidunt, cum, consectetur praesentium perspiciatis eligendi aspernatur architecto amet eaque! Ad pariatur iure ipsam provident! Aliquam molestias asperiores voluptas quas ea, nobis impedit eaque dolor ipsum cupiditate voluptatibus possimus architecto dignissimos est ipsa a et voluptates atque soluta corrupti, earum reiciendis! Doloribus sed reprehenderit in optio a! Veniam, tenetur. Laborum quo cum ex iste consequuntur est ab iure dignissimos nam? Magnam molestias, doloremque dignissimos quia doloribus aperiam praesentium dolorum deserunt ea a animi, saepe veritatis iusto suscipit dolorem officia ipsam soluta explicabo ducimus, vitae maxime placeat vero.
+                    </p>
+                    </div>
+                <div class="col-md-3 col-md-offset-1 image"></div>
+                <div class="col-md-3 col-md-offset-1 image2"></div>
+                </div>
+            </div>
             <div class="row"></div>
         </div>
     </div>
