added images and paragraph fixed header and nav

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -14,11 +14,15 @@
         <div class="container">
             <div class="row">
                 <nav class="col-md-12">
-                    <div class="col-md-2">
+                    <div class="col-md-1">
                         <i class="fas fa-ambulance fa-3x"></i>
+                        
                     </div>
-                    <div class="col-md-9">
-                    <ul class="nav nav-tabs navbar-right">
+                    <div class="col-md-4">
+                        <h2>Da Klinik</h2>
+                    </div>
+                    <div class="col-md-6">
+                    <ul class="nav nav-pills navbar-right">
                             <li role="presentation" class="active"><a href="#">Home</a></li>
                             <li role="presentation"><a href="#">Profile</a></li>
                             <li role="presentation"><a href="#">Messages</a></li>
@@ -35,21 +39,37 @@
             <div class="row">
                 <div class="col-md-2">
                     <button class="btn btn-primary"> 
-                            Doctors Near Me
+                            Klinics Near Me
                     </button>
                 </div>
             </div>
-            <div class="row">
-                <div class="container-fluid">
-                <div class="col-md-4 text-left">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur rerum velit, suscipit provident incidunt, cum, consectetur praesentium perspiciatis eligendi aspernatur architecto amet eaque! Ad pariatur iure ipsam provident! Aliquam molestias asperiores voluptas quas ea, nobis impedit eaque dolor ipsum cupiditate voluptatibus possimus architecto dignissimos est ipsa a et voluptates atque soluta corrupti, earum reiciendis! Doloribus sed reprehenderit in optio a! Veniam, tenetur. Laborum quo cum ex iste consequuntur est ab iure dignissimos nam? Magnam molestias, doloremque dignissimos quia doloribus aperiam praesentium dolorum deserunt ea a animi, saepe veritatis iusto suscipit dolorem officia ipsam soluta explicabo ducimus, vitae maxime placeat vero.
-                    </p>
-                    </div>
-                <div class="col-md-3 col-md-offset-1 image"></div>
-                <div class="col-md-3 col-md-offset-1 image2"></div>
+        <div class="row">
+            <div class="container-fluid">
+                <div class="col-md-4 items">
+                    <ul class="lists">
+                        <li>Free Check-ups</li>
+                        <li>Low Cost Prescriptions</li>
+                        <li>Get In Within 48 Hours</li>
+                        <li>Free Vaccinations From 7am-12pm</li>
+                    </ul>
                 </div>
+                <div class="col-md-3 col-md-offset-1 image"></div>
+                <div class="col-md-3 col-md-offset-1"></div>
             </div>
-            <div class="row"></div>
+        </div>
+        <div class="row">
+                <div class="col-md-4">
+                <img src="images/skeleton.jpg" alt="skeleton" class="img-responsive skeleton">
+                </div>
+            <div class="col-md-5">
+                <p>
+                    <br>Our Goal: </br>
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi modi placeat nemo earum! Sint dolore voluptate, impedit mollitia obcaecati tempore magnam minus sapiente inventore repellendus error blanditiis accusantium voluptatum enim commodi officiis quis est eos quasi fugiat. Voluptas, hic doloribus. Id in ducimus impedit voluptates. Veniam doloremque tempora officia aperiam fugiat sequi modi! Sequi voluptate repellat tempore voluptatem ratione necessitatibus vero est laborum harum tempora delectus, perspiciatis, veritatis totam sunt.
+                </p>
+            </div>
+            <div class="col-md-3">
+                <img src="images/heart.jpg" alt="heart with a stethoscope" class="img-responsive heart">
+            </div>
         </div>
     </div>
     
