cleaned up layout, added footer

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-md-2">
                     <button class="btn btn-primary"> 
-                            Klinics Near Me
+                            Kliniks Near Me
                     </button>
                 </div>
             </div>
@@ -54,7 +54,11 @@
                     </ul>
                 </div>
                 <div class="col-md-3 col-md-offset-1 image"></div>
-                <div class="col-md-3 col-md-offset-1"></div>
+                <div class="col-md-3 col-md-offset-1">
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum cupiditate fuga, beatae tempora, esse consequatur illum praesentium sit assumenda vel culpa perspiciatis placeat necessitatibus soluta tempore dolor est laborum numquam. Facere maxime ipsum a! Quibusdam dolor repudiandae iste illum vero.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="row">
@@ -71,6 +75,9 @@
                 <img src="images/heart.jpg" alt="heart with a stethoscope" class="img-responsive heart">
             </div>
         </div>
+        <footer>
+            <p class="text-right">&copy Makai Leon. 2019. All Rights Reserved.</p>
+        </footer>
     </div>
     
 </body>
