--- a/bootstrap.html
+++ b/bootstrap.html
@@ -13,7 +13,7 @@
     <div class="container-fluid">
         <div class="container">
             <div class="row">
-                <nav class="col-md-12">
+                <nav class="col-md-12 navbar-fixed-top">
                     <div class="col-md-1">
                         <i class="fas fa-ambulance fa-3x"></i>
                         
