some more changes to pictures, spacing with margin and padding

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -72,7 +72,7 @@
                 </p>
             </div>
             <div class="col-md-3">
-                <img src="images/heart.jpg" alt="heart with a stethoscope" class="img-responsive heart">
+                <img src="images/doctors.jpg" alt="doctors doing surgery" class="img-responsive doctors">
             </div>
         </div>
         <footer>
